[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Graphics/Tileset/WorldMap/mario.png" type="Texture" id=1]
[ext_resource path="res://Objects/Worldmap/Mario/Mario.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/Mario/mario_footsteps.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/Mario/mario_start_level.wav" type="AudioStream" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment(){
	COLOR.rgb = vec3(0.0,0.1,0.2);
	COLOR.a = texture(TEXTURE,UV).a / 2.0;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Mario" type="KinematicBody2D"]
collision/safe_margin = 0.001
script = ExtResource( 2 )

[node name="SFXStep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 2.122
bus = "SFX"

[node name="SFXStart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Shadow" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, 6 )
scale = Vector2( 1, -0.302083 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_bottom = 360
smoothing_enabled = true

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -16 )
collision_mask = 2
[connection signal="start_level" from="." to="." method="_on_Mario_start_level"]
[connection signal="finished" from="SFXStep" to="." method="_on_SFXStep_finished"]
[connection signal="finished" from="SFXStart" to="." method="_on_SFXStart_finished"]
